Bug 192779 - Pager doesn't take panel size after plasma crash
Summary: Pager doesn't take panel size after plasma crash
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Plasma
Component: widget-pager (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Daniel Laidig
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-05-15 16:33 UTC by David Mills
Modified: 2009-05-17 22:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Mills 2009-05-15 16:33:06 UTC
Version:            (using KDE 4.2.85)
OS:                Linux
Installed from:    Unlisted Binary Package

The pager plasmoid goes all tiny after a plasma crash. 

Going into pager setings and changing the number of rows and clicking OK is a work-arround in order to get a right sized pager again.

This only happens after a plasma crash, not on startup
Comment 1 Marco Martin 2009-05-17 22:04:41 UTC
SVN commit 969268 by mart:

enforce minimum size, not really clean but the pager sizing is way more
reliable

BUG: 192779


 M  +3 -0      pager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=969268