enforce minimum size, not really clean but the pager sizing is way more reliable

BUG: 192779

svn path=/trunk/KDE/kdebase/workspace/; revision=969268